welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:36: error: not found: value Direction
		if(getDirection() == Direction.EST){
                                     ^