welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.code
override def run() {
var compteur = 1
ecritMessage("0")
droite
while (!fini){
serpent
ecritMessage(compteur)
compteur=compteur+1
}

}

def fini():Boolean={
	if(getX== getMondeLargeur()-1&&getY == getMondeHauteur()-1){
		return true
	}
	else return false
}




	if(getY!=getMondeHauteur&&getX!=getMondeLargeur-1){
		setPos(getX+1,getY)
	}
	else if(getY!=getMondeHauteur&&getX==getMondeLargeur-1){
		setPos(0,getY+1)
	}


def serpent(){
	if(!estFaceMur){
		avance
	}
	else{
		if(getDirection() == Direction.EST){
			droite
			avance
			droite
		}
		else{
			gauche
			avance
			gauche
		}
	}
}